--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -68,6 +68,7 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.min.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/academicons.css" />
+<link rel="shortcut icon" type="image/jpeg" href="{{ site.url }}/assets/cong.jpg">
 
 <meta http-equiv="cleartype" content="on">
 
