try add favicon

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -68,7 +68,7 @@
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.min.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/academicons.css" />
-<link rel="shortcut icon" type="image/jpeg" href="{{ site.url }}/images/cong.jpg">
+<link rel="shortcut icon" type="image/png" href="{{ site.url }}/images/congR.png">
 
 <meta http-equiv="cleartype" content="on">
 
