--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -5,9 +5,15 @@
 	<div class="top-navigation">
 		<nav role="navigation" id="site-nav" class="nav">
 		    <ul>
-		        {% for link in site.links %}
-				<li><a href="{% if link.external %}{{ link.url }}{% else %}{{ site.url }}{{ link.url }}{% endif %}" {% if link.external %}target="_blank"{% endif %}>{{ link.title }}</a></li>
-		        {% endfor %}
+				{% if site.url contains 'zh-CN' %}
+					{% for link in site.cnlinks %}
+					<li><a href="{% if link.external %}{{ link.url }}{% else %}{{ site.url }}{{ link.url }}{% endif %}" {% if link.external %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+					{% endfor %}
+				{% else %}
+					{% for link in site.links %}
+					<li><a href="{% if link.external %}{{ link.url }}{% else %}{{ site.url }}{{ link.url }}{% endif %}" {% if link.external %}target="_blank"{% endif %}>{{ link.title }}</a></li>
+					{% endfor %}
+				{% endif %}
 		    </ul>
 		</nav>
 	</div><!-- /.top-navigation -->
