--- a/_includes/_navigation.html
+++ b/_includes/_navigation.html
@@ -5,7 +5,7 @@
 	<div class="top-navigation">
 		<nav role="navigation" id="site-nav" class="nav">
 		    <ul>
-				{% if site.url contains 'zh-CN' %}
+				{% if page.url contains 'zh-CN' %}
 					{% for link in site.cnlinks %}
 					<li><a href="{% if link.external %}{{ link.url }}{% else %}{{ site.url }}{{ link.url }}{% endif %}" {% if link.external %}target="_blank"{% endif %}>{{ link.title }}</a></li>
 					{% endfor %}
