--- a/_layouts/publications.html
+++ b/_layouts/publications.html
@@ -13,10 +13,10 @@
      The list of publication items
      *********************************/
 /* The list of items */
-.biblist { }
+/*.biblist { }*/
 
 /* The item */
-.biblist li { }
+/*.biblist li { }*/
 
 /* You can define custom styles for plstyle field here fer. */ 
 
